--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ notifications:
   email:
     on_success: never
     on_failure: change
+services: postgresql
+before_script:
+  - psql -c 'create database webrtclojure;' -U postgres
+jdk: oraclejdk8
