--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ notifications:
 services: postgresql
 before_script:
   - psql -c 'create database webrtclojure;' -U postgres
+  - lein migrate
 jdk: oraclejdk8
